<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/user_view" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18sp"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="22dp"
                android:layout_marginBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fragment_person_my_tiezi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:drawableLeft="@drawable/ic_format_size_orange_300_24dp"
                        android:drawablePadding="8dp"
                        android:drawableStart="@drawable/ic_format_size_orange_300_24dp"
                        android:gravity="center_vertical"
                        android:text="@string/my_comment" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/superLightGrey"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:drawableLeft="@drawable/collect"
                        android:drawablePadding="8dp"
                        android:drawableStart="@drawable/collect"
                        android:text="@string/my_collection"
                        android:visibility="gone" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableLeft="@drawable/message"
                        android:drawablePadding="8dp"
                        android:drawableStart="@drawable/message"
                        android:text="@string/my_message"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/person_fragment_setting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:drawableLeft="@drawable/ic_settings_orange_300_24dp"
                        android:drawablePadding="8dp"
                        android:drawableStart="@drawable/ic_settings_orange_300_24dp"
                        android:gravity="center_vertical"
                        android:text="@string/setting" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

    </ScrollView>
</LinearLayout>