<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sunkai.heritage.Fragment.MainFragment"
    android:focusableInTouchMode="true">


    <LinearLayout
        android:id="@+id/ll_fragment_folk_top_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24sp"
            android:layout_marginRight="24sp">

            <EditText
                android:id="@+id/folk_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search"
                android:maxLines="1"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/folk_searchbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_search_grey_400_24dp"
                android:contentDescription="@string/search"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/category"
                android:layout_marginLeft="24dp" />

            <Spinner
                android:id="@+id/folk_heritages_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/heritages" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/location"
                android:layout_marginLeft="24dp" />

            <Spinner
                android:id="@+id/folk_location_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/location" />
        </LinearLayout>
    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_folk_swipe_refresh">

        <com.example.sunkai.heritage.tools.Views.FollowThemeEdgeRecyclerView
            android:id="@+id/folk_show_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="6sp" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>
